--- a/news.html
+++ b/news.html
@@ -16,13 +16,12 @@
 <body>
     <div id="wrapper">
         <header>
-            <img src="kiss.jpg" alt="obraz klimta - header" />
-            
+            <h1 style="text-align: center;"> Yolooo </h1>
         </header>
 
         <nav>
-            <a class="menu active" href="./index.html">About</a>
-            <a class="menu" href="./news.html">Inspirations</a>
+            <a class="menu" href="./index.html">About</a>
+            <a class="menu active" href="./news.html">Inspirations</a>
             <a class="menu" href="#">Catalogue</a>
             <a class="menu" href="#">Contact</a>
 
@@ -30,16 +29,16 @@
         <section>
             <article>
                 <h1>The websites text to be here dawg</h1>
-                <p><img class="left" src="figo.jpg" alt="pioter" > Website like this you can create just like that in 30 minutes</p>
+                
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio exercitationem id quam, cumque, doloribus corporis commodi ex ad magnam, sit debitis dolorum? Impedit recusandae temporibus sint aliquam fuga assumenda quam.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio exercitationem id quam, cumque, doloribus corporis commodi ex ad magnam, sit debitis dolorum? Impedit recusandae temporibus sint aliquam fuga assumenda quam.</p>
 
             </article>
-            <iframe width="1000" height="563" src="https://www.youtube.com/embed/iC1PLC6ljJc?si=Gilu2BpyLyClESJV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </section>
-        <footer>
-            I made it. So i'm da best.
-        </footer>
-    </div>
-</body>
-</html>
+            </section>
+
+            <footer>
+                I made it. So i'm da best.
+            </footer>
+        </div>
+    </body>
+    </html>
